--- a/planning.html
+++ b/planning.html
@@ -10,9 +10,9 @@
 
      <body>
     
-     <h1>  nombre del tema seleccionado  </h1>
+     <h1>   Contenido en HTML ( SECTION, ASIDE, FOOTER, ARTICLE  </h1>
 
-     <h2>objetivo general</h2>
+     <h2>dar a conocer la importancia de HTML en la programacion de paginas web </h2>
     
         <p>en este espacio va el contenido</p>
               <h3>objetivos especificos</h3>
