--- a/planning.html
+++ b/planning.html
@@ -30,7 +30,12 @@
                 </ul>
 
        <h2>materiales</h2>
-     <p>coloque nombre del material enlaces de descarga y otros </p>
+     <p>
+       <li> <a href="http://google.com">Enlace a Google </a> </li>
+       <li> <a href="https://aprende-web.net/html/html3_1.php">Enlace a aprende web </a>
+        <a href="https://disenowebakus.net/enlaces-hipervinculos-tag-ancla-html.php#:~:text=Para%20convertirlo%20en%20un%20enlace,que%20significa%20referencia%20de%20hiperv%C3%ADnculo).&text=Para%20que%20este%20v%C3%ADnculo%20funcione,p%C3%A1gina%20Web%20que%20lo%20contiene.">enlace a diseno web </a>
+      </p>
+
                 <h2>maquetacion</h2>
         <img src="maquetacion.png" alt="maquetacion">
 
