--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <head> 
         <head>
             <meta charset="uft-8"
-             <title> diseños de sitios web</title> 
+             <title> <h2>diseños de sitios web</h2></title> 
 
     </head>
             <h1>ovi diseños de sitios web</h1>
         <body>
             <nav>
                 <ul class="menu">
-                    <li> <a href="planning.html">borrador</li>            
-                    </a>
+                    <li> <a href="planning.html">clic aqui para ir al contenido principal</li>   </a>
+                    <li>entregado por andrés camilo escobar lópez</li>
                 </ul>
             </nav>
 
