--- a/planning.html
+++ b/planning.html
@@ -3,7 +3,7 @@
 
       <head>
        <meta charset="uft-8"
-      <title> borrador del contenido </title>
+      <title> <h2>diseño de paginas web andres camilo escobar lopez</h2> </title>
 
 
     </head>
@@ -32,13 +32,13 @@
        <h2>materiales</h2>
      <p>
        <li> <a href="http://google.com">Enlace a Google </a> </li>
-       <li> <a href="https://aprende-web.net/html/html3_1.php">Enlace a aprende web </a>
-        <a href="https://disenowebakus.net/enlaces-hipervinculos-tag-ancla-html.php#:~:text=Para%20convertirlo%20en%20un%20enlace,que%20significa%20referencia%20de%20hiperv%C3%ADnculo).&text=Para%20que%20este%20v%C3%ADnculo%20funcione,p%C3%A1gina%20Web%20que%20lo%20contiene.">enlace a diseno web </a>
+       <li> <a href="https://aprende-web.net/html/html3_1.php">Enlace a aprende web </a></li>
+      <li><a href="https://disenowebakus.net/enlaces-hipervinculos-tag-ancla-html.php#:~:text=Para%20convertirlo%20en%20un%20enlace,que%20significa%20referencia%20de%20hiperv%C3%ADnculo).&text=Para%20que%20este%20v%C3%ADnculo%20funcione,p%C3%A1gina%20Web%20que%20lo%20contiene.">enlace a diseño web </a> </li>
       </p>
 
                 <h2>maquetacion</h2>
-        <img src="maquetacion.png" alt="maquetacion">
-
+                <img src="maquetacion.png" alt="maquetacion">
+        <li> <a href="index.html"> volver al inicio</li>
     </body>
 
  </html>
