--- a/pagina1.html
+++ b/pagina1.html
@@ -4,14 +4,14 @@
     <head> 
         <head>
             <meta charset="uft-8"
-             <title> <h2>diseños de sitios web</h2></title> 
+             <title> <h2>INICIO</h2></title> 
 
     </head>
             <h1>ovi diseños de sitios web</h1>
         <body>
             <nav>
                 <ul class="menu">
-                    <li> <a href="planning.html">clic aqui para ir al contenido principal</li>   </a>
+                    <li> <a href="index.html">clic aqui para ir al inicio</li>   </a>
                     <li>entregado por andrés camilo escobar lópez</li>
                 </ul>
             </nav>
